--- a/pink/index.html
+++ b/pink/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE = edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="keywords" content="">
-    <link rel="apple-touch-icon" sizes="152x152" href="../static/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../static/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../static/img/favicons/favicon-16x16.png">
-    <link rel="manifest" href="../static/img/favicons/manifest.json">
-    <link rel="mask-icon" href="../static/img/favicons/safari-pinned-tab.svg" color="#d22856">
-    <link rel="shortcut icon" href="../static/img/favicons/favicon.ico">
-    <meta name="msapplication-config" content="../static/img/favicons/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="152x152" href="static/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="static/img/favicons/manifest.json">
+    <link rel="mask-icon" href="static/img/favicons/safari-pinned-tab.svg" color="#d22856">
+    <link rel="shortcut icon" href="static/img/favicons/favicon.ico">
+    <meta name="msapplication-config" content="static/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#d22856">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;amp;subset=cyrillic-ext">
@@ -38,9 +38,9 @@
           <div class="page-header__toggle-menu-wrapper">
             <div class="logo"><a class="logo__link" href="javascript:void(0);" title="Домашняя страница Pink"> <span class="logo--sm">PINK</span>
                 <picture>
-                  <source media="(max-width: 699px)" srcset="../static/img/general/none.png">
-                  <source media="(max-width: 1199px)" srcset="../static/img/general/header-logo-md.png, ../static/img/general/header-logo-md@2x.png 2x, ../static/img/general/header-logo-md@3x.png 3x">
-                  <source media="(min-width: 1200px)" srcset="../static/img/general/header-logo-lg.png, ../static/img/general/header-logo-lg@2x.png 2x, ../static/img/general/header-logo-lg@3x.png 3x"><img class="logo__img" src="../static/img/general/header-logo-lg.png">
+                  <source media="(max-width: 699px)" srcset="static/img/general/none.png">
+                  <source media="(max-width: 1199px)" srcset="static/img/general/header-logo-md.png, static/img/general/header-logo-md@2x.png 2x, static/img/general/header-logo-md@3x.png 3x">
+                  <source media="(min-width: 1200px)" srcset="static/img/general/header-logo-lg.png, static/img/general/header-logo-lg@2x.png 2x, static/img/general/header-logo-lg@3x.png 3x"><img class="logo__img" src="static/img/general/header-logo-lg.png">
                 </picture></a></div><a class="toggle" title="Открыть меню"> <span></span><span></span><span></span></a>
           </div>
           <nav class="main-nav">
@@ -80,9 +80,9 @@
           </div>
           <div class="promo-picture">
             <picture>
-              <source media="(max-width: 699px)" srcset="../static/img/content/iphone-6-sm.png, ../static/img/content/iphone-6-sm@2x.png 2x, ../static/img/content/iphone-6-sm@3x.png 3x">
-              <source media="(max-width: 1199px)" srcset="../static/img/content/iphone-6-md.png, ../static/img/content/iphone-6-md@2x.png 2x, ../static/img/content/iphone-6-md@3x.png 3x">
-              <source media="(min-width: 1200px)" srcset="../static/img/content/iphone-6-lg.png, ../static/img/content/iphone-6-lg@2x.png 2x, ../static/img/content/iphone-6-lg@3x.png 3x"><img class="promo-picture__img" src="../static/img/content/iphone-6-lg.png">
+              <source media="(max-width: 699px)" srcset="static/img/content/iphone-6-sm.png, static/img/content/iphone-6-sm@2x.png 2x, static/img/content/iphone-6-sm@3x.png 3x">
+              <source media="(max-width: 1199px)" srcset="static/img/content/iphone-6-md.png, static/img/content/iphone-6-md@2x.png 2x, static/img/content/iphone-6-md@3x.png 3x">
+              <source media="(min-width: 1200px)" srcset="static/img/content/iphone-6-lg.png, static/img/content/iphone-6-lg@2x.png 2x, static/img/content/iphone-6-lg@3x.png 3x"><img class="promo-picture__img" src="static/img/content/iphone-6-lg.png">
             </picture>
           </div>
         </div>
@@ -102,30 +102,30 @@
         </svg>
         <div class="container">  
           <picture>
-            <source media="(max-width: 1199px)" srcset="../static/img/content/phone-screen.png, ../static/img/content/phone-screen@2x.png 2x, ../static/img/content/phone-screen@3x.png 3x">
-            <source media="(min-width: 1200px)" srcset="../static/img/general/none.png"><img class="features__img--md" src="../static/img/content/phone-screen.png">
+            <source media="(max-width: 1199px)" srcset="static/img/content/phone-screen.png, static/img/content/phone-screen@2x.png 2x, static/img/content/phone-screen@3x.png 3x">
+            <source media="(min-width: 1200px)" srcset="static/img/general/none.png"><img class="features__img--md" src="static/img/content/phone-screen.png">
           </picture>
           <ul class="features__list">
             <li class="features__item">
               <picture>
-                <source media="(max-width: 1199px)" srcset="../static/img/general/none.png">
-                <source media="(min-width: 1200px)" srcset="../static/img/content/phonea.png, ../static/img/content/phonea@2x.png 2x, ../static/img/content/phonea@3x.png 3x"><img class="features__img" src="../static/img/content/phonea.png">
+                <source media="(max-width: 1199px)" srcset="static/img/general/none.png">
+                <source media="(min-width: 1200px)" srcset="static/img/content/phonea.png, static/img/content/phonea@2x.png 2x, static/img/content/phonea@3x.png 3x"><img class="features__img" src="static/img/content/phonea.png">
               </picture>
               <h4 class="features__title">Поднимает настроение</h4>
               <p class="features__descr">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
             </li>
             <li class="features__item">
               <picture>
-                <source media="(max-width: 1199px)" srcset="../static/img/general/none.png">
-                <source media="(min-width: 1200px)" srcset="../static/img/content/phoneb.png, ../static/img/content/phoneb@2x.png 2x, ../static/img/content/phoneb@3x.png 3x"><img class="features__img" src="../static/img/content/phoneb.png">
+                <source media="(max-width: 1199px)" srcset="static/img/general/none.png">
+                <source media="(min-width: 1200px)" srcset="static/img/content/phoneb.png, static/img/content/phoneb@2x.png 2x, static/img/content/phoneb@3x.png 3x"><img class="features__img" src="static/img/content/phoneb.png">
               </picture>
               <h4 class="features__title">Меняет мир вокруг</h4>
               <p class="features__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
             </li>
             <li class="features__item">
               <picture>
-                <source media="(max-width: 1199px)" srcset="../static/img/general/none.png">
-                <source media="(max-width: 1199px)" srcset="undefined.png, ../static/img/content/iphone-6@2x.png 2x, ../static/img/content/iphone-6@3x.png 3x"><img class="features__img" src="../static/img/content/phonec.png">
+                <source media="(max-width: 1199px)" srcset="static/img/general/none.png">
+                <source media="(max-width: 1199px)" srcset="undefined.png, static/img/content/iphone-6@2x.png 2x, static/img/content/iphone-6@3x.png 3x"><img class="features__img" src="static/img/content/phonec.png">
               </picture>
               <h4 class="features__title">Заводит новых друзей</h4>
               <p class="features__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
@@ -213,9 +213,9 @@
       <div class="container">
         <div class="logo"><a class="logo__link">
             <picture>
-              <source media="(max-width: 699px)" srcset="../static/img/general/none.png">
-              <source media="(max-width: 1199px)" srcset="../static/img/general/footer-logo-md.png, ../static/img/general/footer-logo-md@2x.png 2x, ../static/img/general/footer-logo-md@3x.png 3x">
-              <source media="(min-width: 1200px)" srcset="../static/img/general/footer-logo-lg.png, ../static/img/general/footer-logo-lg@2x.png 2x, ../static/img/general/footer-logo-lg@3x.png 3x"><img class="logo__img" src="../static/img/general/footer-logo-lg.png">
+              <source media="(max-width: 699px)" srcset="static/img/general/none.png">
+              <source media="(max-width: 1199px)" srcset="static/img/general/footer-logo-md.png, static/img/general/footer-logo-md@2x.png 2x, static/img/general/footer-logo-md@3x.png 3x">
+              <source media="(min-width: 1200px)" srcset="static/img/general/footer-logo-lg.png, static/img/general/footer-logo-lg@2x.png 2x, static/img/general/footer-logo-lg@3x.png 3x"><img class="logo__img" src="static/img/general/footer-logo-lg.png">
             </picture></a></div>
         <div class="page-footer__social social">
           <ul class="social__list">
