--- a/pink/index.html
+++ b/pink/index.html
@@ -24,7 +24,7 @@
     <!-- Picture element HTML5 shivdocument.createElement( "picture" );
     -->
     <script src="static/js/picturefill.min.js" async=""></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
     <script src="static/js/gmaps.js"></script>
   </head>
   <body><svg style="display:none">
